# hw02_sum

./: .replit  Makefile  lessonplan.md  main.py  pyproject.toml  sum.py  test.py
.lesson/: lessonplan.md
