[tool.poetry]
name = "hw02sum"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^2.16.2"
flake8 = "^6.0.0"
pytest = "^7.2.1"
black = "^23.1.0"
yapf = "^0.32.0"
mypy = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
